feat: add /provider/charger/{charger_id} to get charger by charger_id
